src/routes/contact/contact.css
.contact-container {
  background: var(--secondary);

  width: 90vw;
  height: 70vh;

  border-radius: 15px;

  margin-top: 5vh;
  margin-left: 2.25vw;

  padding: 2vh 2vw;
}

.contact-container h1 {
  font-weight: 500;
  font-size: 4vh;

  margin-left: 2vw;
}

.top-bar {
  text-align: center;
}

.contact-container .mailForm {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr 4fr 0.5fr;

  gap: 2vh 1vw;
}

.contact-container .mailForm textarea {
  grid-row: span 2;
}

.mailForm {
  width: 86vw;
  height: 54vh;

  padding: 3vh 2vw;
}

.mailForm input {
  width: 30vw;
  height: 3vh;

  border: none;

  border-radius: 10px;
}

.mailForm textarea {
  width: 100%;
  height: 100%;

  border: none;
  border-radius: 10px;
}

.textInput {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: 1fr;

  gap: 1vw;
}

.textInput h3 {
  font-size: 1.75vh;
  font-weight: 200;
}

.mailForm button {
  width: 20vw;
  height: 4vh;

  border-radius: 5px;
  border: solid black 1px;
  background: transparent;

  justify-self: center;

  font-size: 1.5vh;

  transition: all .3s ease-out;
}

.mailForm button:hover {
  transform: scale(0.95);
  cursor: pointer;
}

@media (max-width: 900px) {
  .contact-container input {
    width: 50vw;
  }
}

@media (max-width: 650px) {
  .contact-container h1 {
    font-size: 3vh;
  }
}

